--- a/layout/head/index.html
+++ b/layout/head/index.html
@@ -1,8 +1,8 @@
 <template id="head">
 
-    <link href="./colours/styles.css" rel="stylesheet" />
+    <link href="https://antagoniise.github.io/codeCloud/colours/styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-    <link href="./siteManifest/SWStyles.css" rel="stylesheet" />
+    <link href="https://antagoniise.github.io/codeCloud/siteManifest/SWStyles.css" rel="stylesheet" />
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css" />
    
@@ -19,7 +19,7 @@
 <!-- This stylesheet is for testing new styles snd libraries only -->
 <link
   rel="stylesheet"
-  href="https://dev.wuaze.com/styleSheets/dev.css?<?php echo time(); ?>" />
+  href="https://antagoniise.github.io/codeCloud/styleSheets/dev.css?<?php echo time(); ?>" />
 
 
 
@@ -50,9 +50,9 @@
 
     <link rel="icon" type="image/png" href="https://dev.wuaze.com/siteManifest/icons/ios/16.png" />
     <link rel="apple-touch-icon" href="https://dev.wuaze.com/siteManifest/icons/ios/512.png" sizes="512x512" />
-    <link rel="manifest" href="https://dev.wuaze.com/siteManifest/manifest.json" />
+    <link rel="manifest" href="https://antagoniise.github.io/codeCloud/siteManifest/manifest.json" />
 
-    <link rel="canonical" href="https://dev.wuaze.com/" />
+    <link rel="canonical" href="https://antagoniise.github.io/codeCloud/" />
 
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
@@ -60,8 +60,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="GitCodr: Your code library for all your coding needs!" />
     <meta property="og:description" content="GitCodr is a GitHub clone online library for all things related to coding. Create or share tutorials, snippets, external libraries, and much more, all for free." />
-    <meta property="og:url" content="https://dev.wuaze.com/" />
-    <meta property="og:image" content="https://dev.wuaze.com/siteManifest/icons/banner.png" />
+    <meta property="og:url" content="https://antagoniise.github.io/codeCloud/" />
+    <meta property="og:image" content="https://antagoniise.github.io/codeCloud/siteManifest/icons/banner.png" />
     <meta property="og:site_name" content="GitCodr" />
     <!-- Optional Future Tags -->
     <!-- <meta property="fb:app_id" content="YOUR_FB_APP_ID_HERE" /> -->
@@ -69,7 +69,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GitCodr: Your code library for all your coding needs!" />
     <meta name="twitter:description" content="GitCodr is a GitHub clone online library for all things related to coding. Create or share tutorials, snippets, external libraries, and much more, all for free." />
-    <meta name="twitter:image" content="https://dev.wuaze.com/siteManifest/icons/banner.png" />
+    <meta name="twitter:image" content="https://antagoniise.github.io/codeCloud/siteManifest/icons/banner.png" />
     <!-- Optional Future Tag -->
     <!-- <meta name="twitter:site" content="@YOUR_HANDLE_HERE" /> --
 
@@ -83,7 +83,7 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "GitCodr",
-        "url": "https://dev.wuaze.com/",
+        "url": "https://antagoniise.github.io/codeCloud/",
         "description": "GitCodr is a GitHub clone online library for all things related to coding.",
         "inLanguage": "en",
         "author": {
